; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/powernv/extr_opal_console.c_uart_opal_getc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/powernv/extr_opal_console.c_uart_opal_getc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_opal_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uart_opal_softc*)* @uart_opal_getc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uart_opal_getc(%struct.uart_opal_softc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.uart_opal_softc*, align 8
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  store %struct.uart_opal_softc* %0, %struct.uart_opal_softc** %3, align 8
  %6 = load %struct.uart_opal_softc*, %struct.uart_opal_softc** %3, align 8
  %7 = call i32 @uart_opal_get(%struct.uart_opal_softc* %6, i8* %4, i32 1)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 1
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %14

11:                                               ; preds = %1
  %12 = load i8, i8* %4, align 1
  %13 = zext i8 %12 to i32
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %11, %10
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @uart_opal_get(%struct.uart_opal_softc*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
